Add enhanced support for automatic rpm relocation
Changes included in this mod are:

automake/pedigree.am
	Change install permissions to 755 so that pedigree files can be
	rewritten after path relocation is performed on them.

configure.ac
	Add AM_PATH_PYTHON so that ldms.d/ldmsd can properly set up PYTHONPATH,
	so that sourcing the daemon's ldmsd.env.local file sets up all
	environment variables needed in order to use python programs in a
	relocated environment.

	Add gender-related files and relocation-related files to
	OVIS_EXEC_SCRIPTS so that the linux paths get expanded.  I used
	OVIS_EXEC_SCRIPTS instead of AC_CONFIG_FILES because SuSE SLES12
	OBS-build rpmlint complains if scripts with a shebang line in them
	are not executable.

ldms/configure.ac
ldms/src/Makefile.am
lib/configure.ac
lib/src/Makefile.am
	ovis-ldms-configvars.sh and ovis-lib-configvars.sh path expansion
	doesn't work correctly using autoconf unless every referenced path is
	fully specified on the ./configure statement, and that is not possible
	in the case of relocatable binaries.  Switched to automake pathname
	expansion, which does full expansion, and works for this case.

lib/src/ovis_auth/Makefile.am
	Make ovis-auth.sh mode be 0755 at installation so that SuSE SLES12
	OBS-build rpmlint doesn't complain about the file having a shebang but
	not being executable.

util/relocation/Makefile.am
util/relocation/bld_manifest.sh.in
util/relocation/relocate-paths.sh.in
util/relocation/target_locations
	Add new script to build a manifest of all files needing path relocation
	at rpm installation time.

	Add the script that performs the relocation using the manifest as input
	during rpm installation.

util/sample_init_scripts/genders/man/ldmsd-genders.man
	Remove documentation for LDMS_BUILDTYPE and LDMS_PREFIX, they are no
	longer used.

util/sample_init_scripts/genders/systemd/Makefile.am
	Change EXTRA_DIST to instead reference the .in files.  Is there a
	reason to ship ldms-manpatch.sh anymore?  T

--- a/util/sample_init_scripts/genders/man/ldmsd-genders.man
+++ b/util/sample_init_scripts/genders/man/ldmsd-genders.man
@@ -185,13 +185,6 @@ If neither specifies a core number, 67 is the default.
 .PP
 Defining the following variables in the configuration file may lead to surprises in the behavior of a hierarchical ldmsd setup. In particular, the environment on one node may be made inconsistent with the environment on other nodes.
 
-.B LDMS_BUILDTYPE=T
-
-The build type determines what ldms installation to use, if it is defined.
-For T=experimental, the LDMS_PREFIX environment variable is used and rather than /etc, $LDMS_PREFIX/etc is used as sysconfdir in daemon startup. For T=toss2, the Redhat 6 64 bit file system is assumed, with ovis-provided libevent2 expected. For any other T, the Redhat 7 64 bit file system is assumed. This default works in Cray environments as well.
-
-Note for experimenters: LDMS_PREFIX must be set in the systemd service file  /etc/systemd/system/ldmsd[@].service or in /etc/init.d/ldmsd. It is not a configuration file variable.
-
 .B LDMSD_METRIC_PLUGINS=plugin-name-list
 
 If defined, this overrides the ldmsd_metric_plugins gender. In hierarchical aggregation settings, this may lead to incorrect storage configuration and loss of data unless a corresponding value is set on all other nodes in the hierarchy.
@@ -229,16 +222,16 @@ entire configuration files are kept. The fragments, files, and generators are us
 Environment variables and override settings for storage ldmsd serving remote system $LDMSCLUSTER.
 .TP
 .I /usr/lib/systemd/system/ldmsd.service
-Systemd service file for the local ldmsd. This is where LDMS_PREFIX must be set to use any experimental (other than /usr) location of ldmsd with the hosts regular boot script processes.
+Systemd service file for the local ldmsd.
 .TP
 .I /usr/lib/systemd/system/ldmsd@.service
-Systemd service file for all the storage ldmsds serving remote systems. This is where LDMS_PREFIX must be set to use any experimental (other than /usr) location of ldmsd with the hosts regular boot script processes.
+Systemd service file for all the storage ldmsds serving remote systems.
 .TP
 .I /etc/init.d/ldmsd
-The sysvinit boot script for the local host, on systems where systemd is not supported. This is where LDMS_PREFIX must be set to use any experimental (other than /usr) location of ldmsd with the hosts regular boot script processes.
+The sysvinit boot script for the local host, on systems where systemd is not supported.
 .TP
 .I /etc/init.d/ldmsd.*
-The sysvinit boot script for storage ldmsd serving remote system $LDMSCLUSTER. This is where LDMS_PREFIX must be set to use any experimental (other than /usr) location of ldmsd with the hosts regular boot script processes.
+The sysvinit boot script for storage ldmsd serving remote system $LDMSCLUSTER.
 .TP
 .I /usr/bin/ldmsd-pre-systemd
 .I /usr/bin/ldmsd-pre-sysvinit
