--- a/ldms/man/Plugin_cray_system_sampler_variants.man
+++ b/ldms/man/Plugin_cray_system_sampler_variants.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_cray_system_sampler_variants
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "14 Jan 2018" "v4" "LDMS Plugin for all variants of the cray_system_sampler man page"
+.TH man 7 "4 Feb 2018" "v4" "LDMS Plugin for all variants of the cray_system_sampler man page"
 
 .SH NAME
 Plugin_cray_system_sampler_variants - man page for all variants of the LDMS cray_system_sampler plugin
@@ -56,18 +56,10 @@ name=<plugin_name> producer=<pname> instance=<iname>  hsn_metrics_type=<mtype> l
 .br
 configuration line
 .RS
-.TP
+.TPnn
 name=<plugin_name>
 .br
 This MUST be cray_gemini_r sampler  OR cray_aries_r_sampler.
-.TP
-producer=<pname>
-.br
-The producer name string.
-.TP
-instance=<iname>
-.br
-The name of the metric set.
 .TP
 schema=<sname>
 .br
@@ -682,4 +674,4 @@ U64 1626210          ipogif0_tx_bytes
 
 
 .SH SEE ALSO
-ldmsd(7), Plugin_kgnilnd(7), Plugin_aries_mmr(7), Plugin_aries_linkstatus(7), ldms_quickstart(7), ldmsd_controller(8)
+ldmsd(7), ldms_sampler_base(7), Plugin_kgnilnd(7), Plugin_aries_mmr(7), Plugin_aries_linkstatus(7), ldms_quickstart(7), ldmsd_controller(8)
