--- a/ldms/man/Plugin_meminfo.man
+++ b/ldms/man/Plugin_meminfo.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_meminfo
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "03 Dec 2016" "v3" "LDMS Plugin meminfo man page"
+.TH man 7 "04 Feb 2018" "v4" "LDMS Plugin meminfo man page"
 
 .SH NAME
 Plugin_meminfo - man page for the LDMS meminfo plugin
@@ -15,10 +15,13 @@ With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms 
 or a configuration file. The meminfo plugin provides memory info from /proc/meminfo.
 
 .SH CONFIGURATION ATTRIBUTE SYNTAX
+The memifo plugin uses the sampler_base base class. This man page covers only the configuration attributes, or those with default values, specific to the this plugin; see ldms_sampler_base.man for the attributes of the base class.
+
+
 
 .TP
 .BR config
-name=<plugin_name> producer=<pname> instance=<set_name> [schema=<sname>] [component_id=<compid> with_jobid=<bool>]
+name=<plugin_name> [schema=<sname>]
 .br
 configuration line
 .RS
@@ -27,26 +30,10 @@ name=<plugin_name>
 .br
 This MUST be meminfo.
 .TP
-producer=<pname>
-.br
-The producer string value.
-.TP
-instance=<set_name>
-.br
-The name of the metric set.
-.TP
 schema=<schema>
 .br
 Optional schema name. It is intended that the same sampler on different nodes with different metrics have a
 different schema. If not specified, will default to `meminfo`.
-.TP
-component_id=<compid>
-.br
-Optional component identifier. Defaults to zero.
-.TP
-with_jobid=<bool>
-.br
-Option to collect job id with set or 0 if not.
 .RE
 
 .SH BUGS
@@ -62,4 +49,4 @@ start name=meminfo interval=1000000
 .fi
 
 .SH SEE ALSO
-ldmsd(8), ldms_quickstart(7), ldmsd_controller(8)
+ldmsd(8), ldms_quickstart(7), ldmsd_controller(8), ldms_sampler_base(7)
