--- a/ldms/man/Plugin_vmstat.man
+++ b/ldms/man/Plugin_vmstat.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_vmstat
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "03 Dec 2016" "v3" "LDMS Plugin vmstat man page"
+.TH man 7 "04 Dec 2018" "v4" "LDMS Plugin vmstat man page"
 
 .SH NAME
 Plugin_vmstat - man page for the LDMS vmstat plugin
@@ -15,10 +15,11 @@ With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms 
 or a configuration file. The vmstat plugin provides info from /proc/vmstat.
 
 .SH CONFIGURATION ATTRIBUTE SYNTAX
+The vmstat plugin uses the sampler_base base class. This man page covers only the configuration attributes, or those with default values, specific to the this plugin; see ldms_sampler_base.man for the attributes of the base class.
 
 .TP
 .BR config
-name=<plugin_name> producer=<pname> instance=<set_name> [component_id=<compid> schema=<sname>] [with_jobid=<bool>]
+name=<plugin_name> [schema=<sname>]
 .br
 configuration line
 .RS
@@ -27,26 +28,10 @@ name=<plugin_name>
 .br
 This MUST be vmstat.
 .TP
-producer=<pname>
-.br
-The producer name value.
-.TP
-instance=<set_name>
-.br
-The name of the metric set.
-.TP
 schema=<schema>
 .br
 Optional schema name. It is intended that the same sampler on different nodes with different metrics have a
 different schema. If not specified, will default to `vmstat`.
-.TP
-component_id=<compid>
-.br
-Optional component identifier. Defaults to zero.
-.TP
-with_jobid=<bool>
-.br
-Option to collect jobid with set or 0 if not.
 .RE
 
 .SH BUGS
@@ -62,4 +47,4 @@ start name=vmstat interval=1000000
 .fi
 
 .SH SEE ALSO
-ldmsd(8), ldms_quickstart(7), ldmsd_controller(8)
+ldmsd(8), ldms_quickstart(7), ldmsd_controller(8), ldms_sampler_base(7)
