ldmsd: update auto-interval
An updater has a default schedule specified thru configuration. If
a producer set that is updated by the updater has an update hint
different from the default schedule, the updater will update such
set according to the hint contained in the set.

The hints are either the sampling interval and offset if ldmsd is
a 1st-level aggregator or update interval and offset if it is an
aggregator of a higher level.

The interval and offset hints are assumed to be in microseconds.

If a hint contains an offset value, the update offset will be
'offset hint' plus 100000 by default. The increment of the offset
can be altered by exporting the environment variable
LDMSD_UPDTR_OFFSET_INCR. The unit is in microseconds.

--- a/ldms/man/ldmsd.man
+++ b/ldms/man/ldmsd.man
@@ -45,7 +45,12 @@ LDMSD_MEM_SZ
 The size of memory reserved for metric sets. Set this variable or specify "-m"
 to ldmsd. See the -m option for further details. If both are specified, the -m
 option takes precedence over this environment variable.
-
+.TP
+LDMSD_UPDTR_OFFSET_INCR
+The increment to the offset hint in microseconds. This is only for updaters that
+determine the update interval and offset automatically. For example, the offset
+hint is 100000 which is 100 millisecond of the second.  The updater offset will
+be 100000 + LDMSD_UPDTR_OFFSET_INCR. The default is 100000 (100 milliseconds).
 .SS CRAY Specific Environment variables for ugni transport
 ZAP_UGNI_PTAG
 For XE/XK, the PTag value as given by apstat -P.
