--- a/ldms/man/Plugin_kgnilnd.man
+++ b/ldms/man/Plugin_kgnilnd.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_kgnilnd
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "03 Dec 2016" "v3" "LDMS Plugin kgnilnd man page"
+.TH man 7 "10 Feb 2018" "v4" "LDMS Plugin kgnilnd man page"
 
 .SH NAME
 Plugin_kgnilnd - man page for the LDMS kgnilnd plugin
@@ -15,10 +15,11 @@ With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms 
 or a configuration file. The kgnilnd plugin provides Cray specific info from /proc/kgnilnd.
 
 .SH CONFIGURATION ATTRIBUTE SYNTAX
+The kgnilnd plugin uses the sampler_base base class. This man page covers only the configuration attributes, or those with default values, specific to the this plugin; see ldms_sampler_base.man for the attributes of the base class.
 
 .TP
 .BR config
-name=<plugin_name> producer=<pname> instance=<set_name> [component_id=<compid> schema=<sname>]
+name=<plugin_name> [schema=<sname>]
 .br
 configuration line
 .RS
@@ -27,22 +28,10 @@ name=<plugin_name>
 .br
 This MUST be kgnilnd.
 .TP
-producer=<pname>
-.br
-The producer name value.
-.TP
-instance=<set_name>
-.br
-The name of the metric set.
-.TP
 schema=<schema>
 .br
 Optional schema name. It is intended that the same sampler on different nodes with different metrics have a
 different schema. If not specified, will default to `kgnilnd`.
-.TP
-component_id=<compid>
-.br
-Optional component identifier. Defaults to zero.
 .RE
 
 .SH BUGS
@@ -57,4 +46,4 @@ start name=kgnilnd interval=1000000
 .fi
 
 .SH SEE ALSO
-ldmsd(8), Plugin_cray_system_sampler_variants(7), ldms_quickstart(7), ldmsd_controller(8)
+ldmsd(8), Plugin_cray_system_sampler_variants(7), ldms_quickstart(7), ldmsd_controller(8), ldms_sampler_base(7)
