--- a/ldms/man/Plugin_procnetdev.man
+++ b/ldms/man/Plugin_procnetdev.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_procnetdev
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "03 Dec 2016" "v3" "LDMS Plugin procnetdev man page"
+.TH man 7 "10 Dec 2018" "v4" "LDMS Plugin procnetdev man page"
 
 .SH NAME
 Plugin_procnetdev - man page for the LDMS procnetdev plugin
@@ -15,10 +15,11 @@ With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms 
 or a configuration file. The procnetdev plugin provides network info from /proc/net/dev.
 
 .SH CONFIGURATION ATTRIBUTE SYNTAX
+The procnetdev plugin uses the sampler_base base class. This man page covers only the configuration attributes, or those with default values, specific to the this plugin; see ldms_sampler_base.man for the attributes of the base class.
 
 .TP
 .BR config
-name=<plugin_name> producer=<pname> instance=<set_name> ifaces=<ifs> [component_id=<compid> schema=<sname> with_jobid=<0/1>]
+name=<plugin_name> ifaces=<ifs>
 .br
 configuration line
 .RS
@@ -26,14 +27,6 @@ configuration line
 name=<plugin_name>
 .br
 This MUST be procnetdev.
-.TP
-producer=<pname>
-.br
-The producer string value.
-.TP
-instance=<set_name>
-.br
-The name of the metric set.
 .TP
 ifaces=<ifs>
 .br
@@ -43,14 +36,6 @@ schema=<schema>
 .br
 Optional schema name. It is intended that the same sampler on different nodes with different metrics have a
 different schema. If not specified, will default to `procnetdev`.
-.TP
-component_id=<compid>
-.br
-Optional component identifier. Defaults to zero.
-.TP
-with_jobid=<bool>
-.br
-Option to collect jobid with set or 0 if not.
 .RE
 
 .SH BUGS
@@ -66,4 +51,4 @@ start name=procnetdev interval=1000000
 .fi
 
 .SH SEE ALSO
-ldmsd(8), ldms_quickstart(7), ldmsd_controller(8)
+ldmsd(8), ldms_quickstart(7), ldmsd_controller(8), ldms_sampler_base(7)
