--- a/ldms/man/Plugin_procnfs.man
+++ b/ldms/man/Plugin_procnfs.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_procnfs
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "03 Dec 2016" "v3" "LDMS Plugin procnfs man page"
+.TH man 7 "10 Feb 2018" "v4" "LDMS Plugin procnfs man page"
 
 .SH NAME
 Plugin_procnfs - man page for the LDMS procnfs plugin
@@ -16,10 +16,11 @@ or a configuration file.
 The procnfs plugin provides info from /proc/net/rpc/nfs
 
 .SH CONFIGURATION ATTRIBUTE SYNTAX
+The procnfs plugin uses the sampler_base base class. This man page covers only the configuration attributes, or those with default values, specific to the this plugin; see ldms_sampler_base.man for the attributes of the base class.
 
 .TP
 .BR config
-name=<plugin_name> producer=<pname> instance=<set_name> [component_id=<compid> schema=<sname>] [with_jobid=<bool>]
+name=<plugin_name> [schema=<sname>]
 .br
 configuration line
 .RS
@@ -28,26 +29,10 @@ name=<plugin_name>
 .br
 This MUST be procnfs.
 .TP
-producer=<pname>
-.br
-The producer string value.
-.TP
-instance=<set_name>
-.br
-The name of the metric set.
-.TP
 schema=<schema>
 .br
 Optional schema name. It is intended that the same sampler on different nodes with different metrics have a
-different schema. If not specified, will default to `meminfo`.
-.TP
-component_id=<compid>
-.br
-Optional component identifier. Defaults to zero.
-.TP
-with_jobid=<bool>
-.br
-Option to collect jobid with set or 0 if not.
+different schema. If not specified, will default to `procnfs`.
 .RE
 
 .SH BUGS
@@ -63,4 +48,4 @@ start name=procnfs interval=1000000
 .fi
 
 .SH SEE ALSO
-ldmsd(8), ldms_quickstart(7), ldmsd_controller(8)
+ldmsd(8), ldms_quickstart(7), ldmsd_controller(8), ldms_sampler_base(7)
