--- a/ldms/man/Plugin_sysclassib.man
+++ b/ldms/man/Plugin_sysclassib.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_sysclassib
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "07 Nov 2017" "v3" "LDMS Plugin sysclassib man page"
+.TH man 7 "10 Feb 2018" "v4" "LDMS Plugin sysclassib man page"
 
 .SH NAME
 Plugin_sysclassib - man page for the LDMS sysclassib plugin
@@ -14,10 +14,10 @@ config name=sysclassib [ <attr> = <value> ]
 The sysclassib plugin provides IB metric information in raw and rate (per second) forms.
 
 .SH CONFIGURATION ATTRIBUTE SYNTAX
+The sysclassib plugin uses the sampler_base base class. This man page covers only the configuration attributes, or those with default values, specific to the this plugin; see ldms_sampler_base.man for the attributes of the base class.
 
 .TP
-.BR config
-name=<plugin_name> producer=<pname> instance=<set_name> [component_id=<compid> schema=<sname>] [with_jobid=<bool>] ports=<ports> [metrics_type=<mtype>]
+.BR config name=<plugin_name> [schema=<sname>]  ports=<ports> [metrics_type=<mtype>]
 .br
 configuration line
 .RS
@@ -25,18 +25,6 @@ configuration line
 name=<plugin_name>
 .br
 This MUST be sysclassib.
-.TP
-producer=<pname>
-.br
-The producer name value.
-.TP
-component_id=<comp_id>
-.br
-The component id numerical value.
-.TP
-instance=<set_name>
-.br
-The name of the metric set.
 .TP
 metrics_type=<metrics_type>
 .br
@@ -46,10 +34,6 @@ Default is 0.
 ports=<ports>
 .br
 CSV list of the form CARD1.PORT1,CARD2.PORT2. Default is all discovered values.
-.TP 
-with_jobid=<bool>
-.br
-1 to include jobid with set or 0 if not.
 .RE
 
 .SH BUGS
@@ -60,9 +44,9 @@ No known bugs.
 Within ldmsd_controller or a configuration file:
 .nf
 load name=sysclassib
-config name=sysclassib component_id=1 set=vm1_1/sysclassib metric_type=1
+config name=sysclassib component_id=1 producer=vm1_1 instance=vm1_1/sysclassib metric_type=1
 start name=sysclassib interval=1000000 offset=0
 .fi
 
 .SH SEE ALSO
-ldms(7), Plugin_procnetdev(7)
+ldms(7), Plugin_procnetdev(7), ldms_sampler_base(7)
