--- a/ldms/man/Plugin_clock.man
+++ b/ldms/man/Plugin_clock.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_clock
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "07 Nov 2017" "v3" "LDMS Plugin clock man page"
+.TH man 7 "18 Feb 2018" "v4" "LDMS Plugin clock man page"
 
 .SH NAME
 Plugin_clock - man page for the LDMS clock plugin
@@ -16,10 +16,13 @@ This is of pedagogical interest and useful for detecting situations where
 a sample is missed either in being taken or in transmission.
 
 .SH CONFIGURATION ATTRIBUTE SYNTAX
+The clock plugin uses the sampler_base base class. This man page covers only the configuration attributes, or those with\
+ default values, specific to the this plugin; see ldms_sampler_base.man for the attributes of the base class.
+
 
 .TP
 .BR config
-name=<plugin_name> producer=<pname> instance=<set_name> [schema=<sname>] [component_id=<compid> with_jobid=<bool>]
+name=<plugin_name> [schema=<sname>]
 .br
 configuration line
 .RS
@@ -28,26 +31,10 @@ name=<plugin_name>
 .br
 This MUST be clock
 .TP
-producer=<pname>
-.br
-The producer string value.
-.TP
-instance=<set_name>
-.br
-The name of the metric set.
-.TP
 schema=<schema>
 .br
 Optional schema name. It is intended that the same sampler on different nodes with different metrics have a
 different schema. If not specified, will default to `clock`.
-.TP
-component_id=<compid>
-.br
-Optional component identifier. Defaults to zero.
-.TP
-with_jobid=<bool>
-.br
-Option to collect job id with set or 0 if not.
 .RE
 
 .SH BUGS
@@ -63,4 +50,4 @@ start name=clock interval=1000000 offset=0
 .fi
 
 .SH SEE ALSO
-ldmsd(8), ldms_quickstart(7), ldmsd_controller(8)
+ldmsd(8), ldms_quickstart(7), ldmsd_controller(8), ldms_sampler_base(7)
