--- a/ldms/man/Plugin_lnet_stats.man
+++ b/ldms/man/Plugin_lnet_stats.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_lnet_stats
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "27 Aug 2016" "v3" "LDMS Plugin lnet stats man page"
+.TH man 7 "18 Feb 2018" "v4" "LDMS Plugin lnet stats man page"
 
 .SH NAME
 Plugin_lnet_stats - man page for the LDMS lnet_stats plugin
@@ -11,15 +11,16 @@ Within ldmsctl
 ldmsctl> config name=lnet_stats [ <attr>=<value> ]
 
 .SH DESCRIPTION
-With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms daemon) are configured via ldmsctl.
-The lnet_stats plugin provides memory info from /proc/sys/lnet/stats or 
+With LDMS (Lightweight Distributed Metric Service), plugins for the ldmsd (ldms daemon) are configured via ldmsd_controller or a configuration file.
+The lnet_stats plugin provides memory info from /proc/sys/lnet/stats or
 equivalent.
 
-.SH LDMSCTL CONFIGURATION ATTRIBUTE SYNTAX
+.SH CONFIGURATION ATTRIBUTE SYNTAX
+The lnet_stats plugin uses the sampler_base base class. This man page covers only the configuration attributes, or those with default values, specific to the this plugin; see ldms_sampler_base.man for the attributes of the base class.
 
 .TP
 .BR config
-name=<plugin_name> producer=<pname> instance=<set_name> [schema=<sname>] [component_id=<compid> with_jobid=<bool>]
+name=<plugin_name> [schema=<sname> file=<stats_path>]
 .br
 ldmsctl configuration line
 .RS
@@ -28,26 +29,10 @@ name=<plugin_name>
 .br
 This MUST be lnet_stats.
 .TP
-producer=<pname>
-.br
-The producer string value.
-.TP
-instance=<set_name>
-.br
-The name of the metric set.
-.TP
 schema=<schema>
 .br
 Optional schema name. It is intended that the same sampler on different nodes with different metrics have a
 different schema. If not specified, will default to `lnet_stats`.
-.TP
-component_id=<compid>
-.br
-Optional component identifier. Defaults to zero.
-.TP
-with_jobid=<bool>
-.br
-Option to collect job id with set or 0 if not.
 .TP
 file=<stats_path>
 .br
@@ -62,12 +47,12 @@ Does not define meta metrics as it should.
 .SH EXAMPLES
 .PP
 .nf
-$/tmp/opt/ovis/sbin/ldmsctl -S /var/run/ldmsd/metric_socket_vm1_1
-ldmsctl> load name=lnet_stats
-ldmsctl> config name=lnet_stats producer=vm1_1 instance=vm1_1/lnet_stats
-ldmsctl> start name=lnet_stats interval=1000000
-ldmsctl> quit
+Within ldmsd_controller or a configuration file:
+load name=lnet_stats
+config name=lnet_stats producer=vm1_1 instance=vm1_1/lnet_stats component_id=10
+start name=lnet_stats interval=1000000
+
 .fi
 
 .SH SEE ALSO
-ldmsd(8), ldms_quickstart(7)
+ldmsd(8), ldms_quickstart(7), ldmsd_controller(8), ldms_sampler_base(7)
